--- a/js-normal/mozisucounter/index.html
+++ b/js-normal/mozisucounter/index.html
@@ -11,9 +11,8 @@
     <h3>400文字まで</h3>
     <form>
       <textarea type="text" id="sampleForm"></textarea>
-      <p id="textCounter">0</p>
+      <p id="textCounter">400</p>
       <input type="reset" value="リセット" id="resetBtn" />
-
       <!-- 追加チャレンジ問題 -->
 
       <!-- <input type="button" value="頭文字削除" id="iniDel" />
@@ -21,6 +20,6 @@
 
       <!-- 追加チャレンジ問題 ここまで -->
     </form>
-    <script src="../mozisuucount/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
