--- a/js-easy/fizzbuzz/index.html
+++ b/js-easy/fizzbuzz/index.html
@@ -9,20 +9,13 @@
 
   <body>
     <!-- チャレンジ問題 -->
-    <button onclick="rewriteCntUp()">カウントアップ</button>
-    <p id="rewriteNum"></p>
-    <!-- チャレンジ問題ここまで -->
-
-    <!-- 追加チャレンジ問題 -->
-
-    <!-- <h1>FizzbBuzzゲーム</h1>
+    <h1>FizzbBuzzゲーム</h1>
     <p id="showNum"></p>
     <button onclick="fizzBtn()">fizz</button>
     <button onclick="buzzBtn()">buzz</button>
     <button onclick="fizzbuzzBtn()">fizzbuzz</button>
-    <button onclick="numBtn()" class="last-btn">Number</button> -->
-
-    <!-- 追加チャレンジ問題 ここまで -->
+    <button onclick="numBtn()" class="last-btn">Number</button>
+    <!-- チャレンジ問題 ここまで -->
     <script src="./main.js"></script>
   </body>
 </html>
