--- a/js-easy/dom/index.html
+++ b/js-easy/dom/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOM</title>
+    <meta name="viewport" content="width=+, initial-scale=1.0" />
+    <title>Document</title>
   </head>
   <body>
     <h1 id="title">買い物リスト</h1>
     <ul class="list">
-      <li>リンゴ</li>
+      <li>りんご</li>
       <li>みかん</li>
-      <li>ババナ</li>
+      <li>バナナ</li>
     </ul>
-    <button id="button">削除</button>
-
-    <script src="./main.js"></script>
+    <button type="button" id="button">削除</button>
   </body>
 </html>
