--- a/js-easy/dom/dom.html
+++ b/js-easy/dom/dom.html
@@ -18,6 +18,6 @@
 
     <img src="https://placehold.it/200x200" alt="ダミー画像" />
 
-    <script src="main.js"></script>
+    <script src="dom.js"></script>
   </body>
 </html>
