--- a/js-easy/fizzbuzz/2.html
+++ b/js-easy/fizzbuzz/2.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./2.css" />
     <title>Fizzbuzz</title>
   </head>
   <body>
-    <h1>FizzbBuzzゲーム</h1>
+    <h1>FizzBuzzゲーム</h1>
     <p id="showNum"></p>
     <button onclick="fizzBtn()">fizz</button>
     <button onclick="buzzBtn()">buzz</button>
     <button onclick="fizzbuzzBtn()">fizzbuzz</button>
     <button onclick="numBtn()" class="last-btn">Number</button>
-    <script src="./main.js"></script>
+    <script src="./2.js"></script>
   </body>
 </html>
