--- a/js-normal/mozisucounter/2.html
+++ b/js-normal/mozisucounter/2.html
@@ -12,13 +12,6 @@
       <textarea type="text" id="sampleForm"></textarea>
       <p id="textCounter">400</p>
       <input type="reset" value="リセット" id="resetBtn" />
-    <script src="main.js"></script>
+    <script src="./2.js"></script>
   </body>
 </html>
-<!-- 追加チャレンジ問題 -->
-
-      <!-- <input type="button" value="頭文字削除" id="iniDel" />
-      <input type="button" value="末尾削除" id="endDel" /> -->
-
-      <!-- 追加チャレンジ問題 ここまで -->
-    
