--- a/js-normal/timer/2.html
+++ b/js-normal/timer/2.html
@@ -15,7 +15,6 @@
         <input type="button" id="stopTimer" value="ストップ"></input>
     </form>
     <p id="nowTime"></p>
-    <script src="./main.js"></script>
+    <script src="./2.js"></script>
 </body>
-
 </html>
