--- a/js-easy/datyoclub/index.html
+++ b/js-easy/datyoclub/index.html
@@ -11,6 +11,7 @@
     <h1>ダチョウ倶楽部ゲーム</h1>
     <button onclick="cntUp()">俺がやる!!!</button>
     <button onclick="reply()">どうぞどうぞぉ～</button>
+    <button onclick="cntDown()">俺はやらない!!!</button>
 
     <!-- チャレンジ問題 -->
 
