--- a/js-hard/ToDo/index.html
+++ b/js-hard/ToDo/index.html
@@ -19,6 +19,6 @@
         <h3>タスク</h3>
       </ul>
     </div>
-    <script src="./js/maim.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
